--- a/Resource/BaseObject/Main.storyboard
+++ b/Resource/BaseObject/Main.storyboard
@@ -4273,10 +4273,10 @@
         <segue reference="SFc-rb-hIO"/>
         <segue reference="oHQ-Ni-B76"/>
         <segue reference="C1B-oJ-Xmi"/>
-        <segue reference="2Iw-Lt-h1E"/>
+        <segue reference="iUw-Wp-Uz3"/>
         <segue reference="3fp-yp-yps"/>
-        <segue reference="bZ7-dw-aX2"/>
-        <segue reference="BEB-iv-AGa"/>
+        <segue reference="M6r-Rs-t8m"/>
+        <segue reference="odZ-6m-Wsi"/>
         <segue reference="aNU-Zf-Wbq"/>
     </inferredMetricsTieBreakers>
 </document>
